...
        android:layout_marginBottom="8dp"
        android:text="collect"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSignout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="sign out"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="Menu"
        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btndig"
        android:layout_width="wrap_content"
...
        android:layout_marginBottom="8dp"
        android:text="building"
        mapbox:layout_constraintBottom_toTopOf="@+id/btnWallet"
        mapbox:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="for test"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
