...
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/text_rate_shil"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnToWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="wallet"
        app:layout_constraintBottom_toTopOf="@+id/btnToBank"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnToBank"
        android:layout_width="match_parent"
...
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/text_rate_peny2"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnManageCoinBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="back"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="135dp" />

    <Button
        android:id="@+id/btnMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="mail"
        app:layout_constraintBottom_toTopOf="@+id/btnChest"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_CoinsFF"
        android:layout_width="match_parent"
...
